clang/test/CXX/dcl.decl/dcl.meaning/dcl.fct/p9-0x.cpp
// RUN: %clang_cc1 -fsyntax-only -verify -std=c++0x %s

auto j() -> enum { e3 }; // expected-error{{can not be defined in a type specifier}}
